# abcpy-models

./: ReadMe.md  Ricker.py
BiologicalScience/PlateletsDeposition/: Distance.py  Inference.py  InferenceSABC.py  Makefile  Model.py  ReadMe.md  Statistics.py  model.cpp  model.i
BiologicalScience/StochasticPlateletsDeposition/: .gitignore  Data.csv  DataCleanedObserved.csv  DataObserved.csv  Inference.py  MLE_variance.py  Makefile  Makefile_standAlone  Model.py  ReadData.py  ReadMe.md  model.cpp  model.i  model.py  posterior_mode.py  posterior_prediction_check.py  predict.py  statistic.py  visualization.py
Climate/Lorenz95Stochastic/: LorenzInference.py  Model.py  ReadMe.md  Statistics.py
EcologicalScience/: LotkaVolterra.py  ReadMe.md  RecruitmentBoomBust.py  Ricker.py
EcologicalScience/Bass/: Bass.nlogo  Distance.py  Inference.py  ReadMe.md  model.py
EcologicalScience/EarthWorms/: Inference.py  ReadMe.md  model.py
GeologicalScience/VolcanicEruption/: README.md
GeologicalScience/VolcanicEruption/code/TTM/piaf/: .gitignore  CMakeLists.txt  testAdvDiff.py
GeologicalScience/VolcanicEruption/code/TTM/piaf/include/: piaf.hpp
GeologicalScience/VolcanicEruption/code/TTM/piaf/include/Model/: ConstantSpeed.hpp  Diffusion.hpp  DiffusionWithRandomSpeed.hpp  DirectionalDiffusion.hpp
GeologicalScience/VolcanicEruption/code/TTM/piaf/include/Simulator/: AbstractDomain.hpp  AbstractEulerianDomain.hpp  AbstractSimulator.hpp  CASimulator.hpp  Domain.hpp  ExactSimulator.hpp  GenericParticleFamily.hpp  GridTerrain.hpp  LagrangianDomain.hpp  ParticleRepository.hpp  ParticleTracker.hpp  SimulatorTypes.hpp  SimulatorTypes.hpp.orig  SpeedFunctor.hpp  VariousFunctions.hpp  VelocityField.hpp
GeologicalScience/VolcanicEruption/code/TTM/piaf/include/Simulator/MPI/: MPI3DBlockCyclicDomain.hpp  MPI3DGridTopology.hpp  MPIAbstractEulerianDomain.hpp  MPIAbstractSimulator.hpp  MPIExactSimulator.hpp  MPIGridTerrain.hpp  MPIParticleRepository.hpp  MPIParticleTracker.hpp  MPISimpleDomain.hpp  MPITopology.hpp
GeologicalScience/VolcanicEruption/code/TTM/piaf/include/Tools/FileManager/: FileManager.hpp  MPIFileManager.hpp
GeologicalScience/VolcanicEruption/code/TTM/piaf/include/Tools/FormattedLog/: Log.hpp  Trace.hpp
GeologicalScience/VolcanicEruption/code/TTM/piaf/src/Simulator/: AbstractEulerianDomain.cpp  AbstractSimulator.cpp  CASimulator.cpp  Domain.cpp  ExactSimulator.cpp  GenericParticleFamily.cpp  GridTerrain.cpp  LagrangianDomain.cpp  ParticleRepository.cpp  ParticleTracker.cpp  SpeedFunctor.cpp  VelocityField.cpp
GeologicalScience/VolcanicEruption/code/TTM/piaf/src/Simulator/MPI/: MPI3DBlockCyclicDomain.cpp  MPI3DGridTopology.cpp  MPIAbstractEulerianDomain.cpp  MPIAbstractSimulator.cpp  MPIExactSimulator.cpp  MPIGridTerrain.cpp  MPIParticleRepository.cpp  MPIParticleTracker.cpp  MPISimpleDomain.cpp  MPITopology.cpp
GeologicalScience/VolcanicEruption/code/TTM/piaf/src/Tools/: .gitignore  FileManager.cpp  MPIFileManager.cpp
GeologicalScience/VolcanicEruption/code/TTM/piaf/test/: advectionDiffusion.cpp  advectionDirectionalDiffusion.cpp  benchmark.cpp  benchmark2.cpp
GeologicalScience/VolcanicEruption/code/TTM/tetras/: .gitignore  CMakeLists.txt  download_ECMWF.py  pululagua2450BP-constantdensity-test.csv  run_daint_1.sh  run_daint_2.sh  run_daint_3.sh
GeologicalScience/VolcanicEruption/code/TTM/tetras/coupling/: lightvolcano.cpp
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/: atmosphereSubModel.cpp  atmosphericContinent.cpp  atmosphericPlume.cpp  parseargs.hpp  tetras.cpp  tetras_model.cpp  tetrascontinent.cpp
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/Models/: VolcanicTephra.hpp
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/Models/VolcanicTephra/: VolcanicTephraParticleFamilies.hpp  VolcanicTephraSpeeds.hpp
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/Models/VolcanicTephra/Tools/: Atmosphere.cpp  Atmosphere.hpp  VolcanicColumnProfile.cpp  VolcanicColumnProfile.hpp  WimPlume.cpp  WimPlume.hpp  WindProfile.cpp  WindProfile.hpp
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/Tools/: ToolsTypes.hpp
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/Tools/ConsoleInterface/: ConsoleInterface.cpp  ConsoleInterface.hpp
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/Tools/Display2D/: Display2D.cpp  Display2D.hpp
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/Tools/EruptionParameters/: EruptionParameters.cpp  EruptionParameters.hpp  FakeEruptionParameters.hpp
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/Tools/FileManager/: VolcanoFileManager.cpp  VolcanoFileManager.hpp  VolcanoMPIFileManager.cpp  VolcanoMPIFileManager.hpp
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/Tools/Simulation/: README  Simulation.cpp  Simulation.hpp  atmosphere.cpp  atmosphere.h  distributedsimulation.cpp  distributedsimulation.h
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/Tools/Test/: .gitignore  test.cpp
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/Tools/communication/: mapper.cpp  mapper.h  musclemapper.cpp  musclemapper.h  utility.cpp  utility.h
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/Tools/communication/connectors/: connectorcommon.h  muscleconnectors.cpp  muscleconnectors.h
GeologicalScience/VolcanicEruption/code/TTM/tetras/src/Tools/communication/interpoler/: .gitignore  interpoler.cpp
MolecularDynamics/HeliumLJ/: Distance.py  HeliumInference.py  ReadMe.md
MolecularDynamics/HeliumLJFloorField/: Model.py  ReadMe.md
MolecularDynamics/WaterTIP4P/: ReadMe.md  WaterInference.py
MolecularDynamics/WaterTIP4PFloorField/: Distance.py  Model.py  ReadMe.md  WaterInference.py
Network/NetworkGeneration/: Model.py  ReadMe.md
Network/SpreadingProcessNetwork/: BayesEstimate.py  ComplexContagionBEVisualization.py  ComplexContagionExample.py  NetSleuth.py  (+5 more)
Others/: BivariateNormal.py  GaussianMixtureModel.py  README.md  Ricker.py  g_and_k.py
PollakDemand/: ReadMe.md  distances.py  model.py  pollak_inference.py
QueueingSystems/: ReadMe.md  mg1_model.py  test.py
(+2320 files in other folders)
